# django_shoestore

./: pyproject.toml
manufacturer/: models.py  views.py
manufacturer/migrations/: 0001_initial.py
shoes/: admin.py  models.py  serializers.py  views.py
shoes/management/commands/: bootstrap_data.py  populate.py
shoes/migrations/: 0001_initial.py  0002_auto_20200323_1510.py
shoestore/: settings.py  urls.py
